RESOLVED FIXED11285
Stop and reload don't work on the WebView
https://bugs.webkit.org/show_bug.cgi?id=11285
Summary Stop and reload don't work on the WebView
Brett Wilson (Google)
Reported 2006-10-13 14:42:57 PDT
WebView::stopLoading and WebView::reload are important for any embedding layer, but are not currently hooked up to anything. They currently trap to the debugger.
Attachments
Patch (1.52 KB, patch)
2006-10-13 17:59 PDT, Brett Wilson (Google)
mjs: review+
Brett Wilson (Google)
Comment 1 2006-10-13 17:59:00 PDT
Created attachment 11083 [details] Patch This patch simply hooks up the COM layer to the underlying frame objects so that the stopLoading() and reload() functions have the desired affect.
Maciej Stachowiak
Comment 2 2006-10-31 04:39:19 PST
Comment on attachment 11083 [details] Patch r=me I have this merged in my tree, please hold off and let me land it.
Maciej Stachowiak
Comment 3 2006-10-31 09:55:09 PST
landed
Note You need to log in before you can comment on or make changes to this bug.