        Reviewed by Maciej.

- fixed "Stop and reload don't work on the WebView"
        http://bugs.webkit.org/show_bug.cgi?id=11285

        * COM/WebFrame.cpp:
        (WebFrame::stopLoading): Implement.
        * COM/WebView.cpp:
        (WebView::stopLoading): ditto
        (WebView::reload): ditto



Canonical link: https://commits.webkit.org/14699@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17482 268f45cc-cd09-0410-ab3c-d52691b4dbfc