WebKit/COM/WebFrame.cpp
@@ -276,7 +276,7 @@ HRESULT STDMETHODCALLTYPE WebFrame::provisionalDataSource(
 
 HRESULT STDMETHODCALLTYPE WebFrame::stopLoading( void)
 {
-//    DebugBreak();
+    d->frame->stopLoading(false);
     return E_NOTIMPL;
 }
 
